[package]
name = "cornea"
version = "0.1.0"
authors = ["Jimmy Brisson <jimmy.brisson@arm.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
bufstream = "0.1"
gdbstub = "0.5.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.clap]
version = "3"
features = ["derive"]

[profile.release]
debug = true
panic = "abort"
